rnsc/test_data/integration/error/parser/type_hints/utf8/string_operand.rns
.class Foo
.super @utf8 "string literal" ; string literal is not valid operand